<resources>
    <string name="app_name">Smart Biz Card</string>
    <!--Strings for main menu-->
    <string name="sendcard">Send Biz Card</string>
    <string name="receivecard">Receive Biz Card</string>
    <string name="updateinfo">View My Card</string>
    <string name="edit_nfc">Details on NFC Card</string>
    <string name="managecards">Manage Cards</string>
    <!--Strings for View Details-->
    <string name="defaultname">User Fullname</string>
...
    <string name="updatecard">Write Information</string>
    <!--Strings for Log in-->
    <string name="loginemailbanner">Please enter email:</string>
    <string name="loginemail">Email</string>
    <string name="loginpasswordbanner">Please enter password:</string>
    <string name="loginpassword">Password</string>
    <string name="enter">Log in</string>
    <string name="register">No account? Register now.</string>
    <!--Strings for Registration-->
    <string name="create_account">Create Account</string>
    <!--Strings for recieve qr -->
    <string name="qrscanbanner">Activate QR Scanner</string>
    <string name="qrscan">Activate Scanner</string>
    <!--Strings for send qr -->
    <string name="grbanner">Generate Code</string>
    <!--Strings for send NFC-->
    <string name="sendnotify">Touch to Send </string>
    <!--Strings for send interface-->
    <string name="sendbanner">Select A Sending Option:</string>
    <string name="nfcsend">NFC</string>
    <string name="qrsend">QR Code</string>
    <!--Strings for update interface-->
    <string name="update_account">Update Details</string>
    <!--Strings for receiver interface-->
    <string name="receiverbanner">Business Card Details:</string>
    <!--Strings for receive interface-->
    <string name="receivebanner">Select A Receiving Option:</string>
...
    <!--ORC-->
    <string name="photo">Photo</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- OCR Library -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Storage doesn\'t available</string>
    <string name="title_activity_ocr">Ocr Capture Activity</string>

    <!--Agreement-->
...
